--- a/Mymtc/app/src/main/res/layout/activity_main.xml
+++ b/Mymtc/app/src/main/res/layout/activity_main.xml
@@ -25,13 +25,34 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="WELCOME"
+            android:text="WELCOME TO A.P.S.R.T.C "
             android:textSize="24sp"
             android:gravity="center"
-            android:layout_marginTop="100dp"
-            android:id="@+id/tv" />
+            android:id="@+id/tv"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textColor="#ff0213"
+            android:textStyle="bold" />
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:src="@drawable/rtc"
+            android:layout_marginTop="56dp"
+            android:layout_below="@+id/tv"
+            android:layout_centerHorizontal="true" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView3"
+            android:src="@drawable/bus"
+            android:layout_alignParentBottom="true"
+            android:layout_alignRight="@+id/tv"
+            android:layout_alignEnd="@+id/tv"
+            android:layout_below="@+id/imageView"
+            android:layout_margin="80dp" />
 
 
     </RelativeLayout>
