--- a/Mymtc/app/src/main/res/layout/screen_popup.xml
+++ b/Mymtc/app/src/main/res/layout/screen_popup.xml
@@ -2,25 +2,70 @@
     android:id="@+id/popup_element"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#fd000000"
+    android:background="#ab67cc"
     android:orientation="vertical"
     android:padding="10sp"
     android:weightSum="1">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView5"
+        android:src="@drawable/log" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Source"
+        android:id="@+id/textView4"
+        android:textColor="#ffffff"
+        android:textSize="30dp"
+        android:textStyle="bold|italic" />
+
     <TextView
         android:id="@+id/txtView"
-        android:layout_width="176dp"
+        android:layout_width="361dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5sp"
-        android:text="Hello!"
-        android:textColor="#ffff0525"
-        android:textSize="@dimen/abc_action_bar_stacked_max_height" />
+        android:textColor="#000000"
+        android:textSize="20dp" />
 
-    <ImageView
-        android:layout_width="209dp"
-        android:layout_height="186dp"
-        android:id="@+id/imageView"
-        android:src="@mipmap/ic_launcher" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Destination"
+        android:id="@+id/textView6"
+        android:textStyle="bold|italic"
+        android:textSize="30dp"
+        android:textColor="#ffffff"
+        android:textIsSelectable="false" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView7"
+        android:textColor="#000000"
+        android:textSize="20dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Route"
+        android:id="@+id/textView8"
+        android:textColor="#ffffff"
+        android:textSize="30dp"
+        android:textStyle="bold|italic" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView9"
+        android:textColor="#000000"
+        android:textSize="20dp" />
 
     <Button
         android:id="@+id/btn_close_popup"
