--- a/Mymtc/app/src/main/res/layout/simple_list_item_1.xml
+++ b/Mymtc/app/src/main/res/layout/simple_list_item_1.xml
@@ -3,7 +3,7 @@
 
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#ffb128"
+    android:background="@drawable/abc_btn_switch_to_on_mtrl_00001"
     android:textColor="#0f19ff"
     android:paddingBottom="25dp"
     android:textSize="@dimen/abc_action_bar_icon_vertical_padding_material"
