--- a/Mymtc/app/src/main/res/layout/simple_spinner_dropdown_item.xml
+++ b/Mymtc/app/src/main/res/layout/simple_spinner_dropdown_item.xml
@@ -7,4 +7,5 @@
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:ellipsize="marquee"
     android:textColor="#aa66cc"
-    android:textColorHighlight="@android:color/background_dark" />
+    android:textColorHighlight="@android:color/background_dark"
+    android:background="@drawable/abc_popup_background_mtrl_mult" />
