--- a/Mymtc/app/src/main/res/layout/spot.xml
+++ b/Mymtc/app/src/main/res/layout/spot.xml
@@ -3,20 +3,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView4"
+        android:src="@drawable/log"
+        android:layout_marginLeft="2dp" />
+
     <Spinner
         android:id="@+id/osversions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:clickable="false"
-        android:spinnerMode="dropdown"
-        android:textAlignment="center" />
+        android:layout_gravity="center_horizontal" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Spot"
         android:id="@+id/button"
         android:layout_gravity="center_horizontal" />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView2"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/abc_cab_background_top_mtrl_alpha" />
 
     <LinearLayout
         android:id="@+id/linearLayout1"
